--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["KaHLK <yeah-kris@hotmail.com>"]
 edition = "2018"
 
 [dependencies]
+serde = { version = "1.0.104", features = ["derive"] }
+serde_json = "1.0.44"
+directories = "2.0.2"
